--- a/20250109.md
+++ b/20250109.md
@@ -1,4 +1,232 @@
 # Sockets
 
-## Sockets con timeout
+## Código base que hay que aprenderse de memoria y cómo funcionan los sockets.
 
+
+## Sockets con timeout
+https://github.com/AlfonsoDeUna/DAM_PROG_SERVICIOS_PROCESOS/blob/main/20250108.md
+
+## Servidor con hilos
+
+```java
+import java.io.*;
+import java.net.*;
+
+public class BlockingServer {
+    public static void main(String[] args) throws IOException {
+        ServerSocket serverSocket = new ServerSocket(8080);
+        System.out.println("Servidor iniciado en el puerto 8080...");
+        
+        while (true) {
+            Socket clientSocket = serverSocket.accept();
+            System.out.println("Cliente conectado.");
+            
+            // Crear un hilo para manejar la conexión
+            new Thread(() -> handleClient(clientSocket)).start();
+        }
+    }
+
+    private static void handleClient(Socket socket) {
+        try (BufferedReader in = new BufferedReader(new InputStreamReader(socket.getInputStream()));
+             PrintWriter out = new PrintWriter(socket.getOutputStream(), true)) {
+
+            String inputLine;
+            while ((inputLine = in.readLine()) != null) {
+                System.out.println("Mensaje del cliente: " + inputLine);
+                out.println("Echo: " + inputLine); // Responder al cliente
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        } finally {
+            try {
+                socket.close();
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+}
+```
+
+## Servidor con NIO
+
+```java
+import java.nio.ByteBuffer;
+import java.nio.channels.Channel;
+import java.nio.channels.SelectionKey;
+import java.nio.channels.Selector;
+import java.nio.channels.ServerSocketChannel;
+import java.nio.channels.SocketChannel;
+import java.io.IOException;
+import java.net.InetSocketAddress;
+import java.util.Iterator;
+import java.util.Scanner;
+import java.util.Set;
+
+public class ServerNIO {
+public static void main(String[] args) {
+        int port = 8080;
+
+        try {
+            Selector selector = Selector.open(); // Crear el selector
+            ServerSocketChannel serverChannel = ServerSocketChannel.open(); // Crear el canal del servidor
+            serverChannel.bind(new InetSocketAddress(port)); // Asociar al puerto
+            serverChannel.configureBlocking(false); // Configurar como no bloqueante
+            serverChannel.register(selector, SelectionKey.OP_ACCEPT); // Registrar el canal para aceptar conexiones
+
+            System.out.println("Servidor de chat escuchando en el puerto " + port + "...");
+
+            while (true) {
+                selector.select(); // Esperar eventos
+                Set<SelectionKey> keys = selector.selectedKeys(); // Obtener las claves seleccionadas
+                Iterator<SelectionKey> iterator = keys.iterator();
+
+                while (iterator.hasNext()) {
+                    SelectionKey key = iterator.next();
+                    iterator.remove();
+
+                    if (key.isAcceptable()) {
+                        // Aceptar nueva conexión
+                        SocketChannel clientChannel = serverChannel.accept();
+                        clientChannel.configureBlocking(false);
+                        clientChannel.register(selector, SelectionKey.OP_READ);
+                        System.out.println("Cliente conectado: " + clientChannel.getRemoteAddress());
+                    } else if (key.isReadable()) {
+                        // Leer mensaje del cliente
+                        SocketChannel clientChannel = (SocketChannel) key.channel();
+                        ByteBuffer buffer = ByteBuffer.allocate(256);
+                        int bytesRead = clientChannel.read(buffer);
+
+                        if (bytesRead == -1) {
+                            System.out.println("Cliente desconectado: " + clientChannel.getRemoteAddress());
+                            clientChannel.close();
+                            key.cancel();
+                            continue;
+                        }
+
+                        buffer.flip();
+                        String message = new String(buffer.array(), 0, buffer.limit());
+                        System.out.println("Mensaje recibido: " + message.trim());
+
+                        // Difundir el mensaje a otros clientes
+                        broadcastMessage(selector, clientChannel, message.trim());
+                    }
+                }
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    private static void broadcastMessage(Selector selector, SocketChannel sender, String message) throws IOException {
+        for (SelectionKey key : selector.keys()) {
+            Channel channel = key.channel();
+            if (channel instanceof SocketChannel && channel != sender) {
+                SocketChannel clientChannel = (SocketChannel) channel;
+                ByteBuffer buffer = ByteBuffer.wrap((message + "\n").getBytes());
+                clientChannel.write(buffer);
+            }
+        }
+    }
+}
+```
+### Ejercicio_clase: Ejecuta este servidor y explica el código
+
+### Diferencias entre la implementación con hilos y con NIO
+
+## Transferir ficheros entre servidor y cliente
+
+Para transferir archivos entre cliente y servidor con compresión, puedes implementar un sistema en Java utilizando **sockets** para la comunicación y **GZIP** para la compresión.
+
+### Pasos para Transferir Archivos con Compresión
+
+1. **Servidor**:
+   - Espera conexiones de los clientes.
+   - Recibe el archivo comprimido.
+   - Descomprime el archivo y lo guarda en una ubicación específica.
+
+2. **Cliente**:
+   - Comprime el archivo antes de enviarlo.
+   - Conecta al servidor.
+   - Envía el archivo comprimido.
+
+
+### 1. **Servidor**
+```java
+import java.io.*;
+import java.net.*;
+import java.util.zip.GZIPInputStream;
+
+public class FileServer {
+    public static void main(String[] args) {
+        int port = 12345;
+        try (ServerSocket serverSocket = new ServerSocket(port)) {
+            System.out.println("Servidor esperando conexiones...");
+            Socket clientSocket = serverSocket.accept();
+            System.out.println("Conexión aceptada desde " + clientSocket.getInetAddress());
+
+            try (InputStream in = clientSocket.getInputStream();
+                 GZIPInputStream gzipIn = new GZIPInputStream(in);
+                 FileOutputStream fileOut = new FileOutputStream("archivo_recibido.txt")) {
+                 
+                byte[] buffer = new byte[1024];
+                int len;
+                while ((len = gzipIn.read(buffer)) > 0) {
+                    fileOut.write(buffer, 0, len);
+                }
+                System.out.println("Archivo recibido y descomprimido con éxito.");
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
+
+#### 2. **Cliente**
+```java
+import java.io.*;
+import java.net.*;
+import java.util.zip.GZIPOutputStream;
+
+public class FileClient {
+    public static void main(String[] args) {
+        String serverAddress = "localhost";
+        int port = 12345;
+        File file = new File("archivo_a_enviar.txt");
+
+        try (Socket socket = new Socket(serverAddress, port);
+             FileInputStream fileIn = new FileInputStream(file);
+             GZIPOutputStream gzipOut = new GZIPOutputStream(socket.getOutputStream())) {
+             
+            byte[] buffer = new byte[1024];
+            int len;
+            while ((len = fileIn.read(buffer)) > 0) {
+                gzipOut.write(buffer, 0, len);
+            }
+            System.out.println("Archivo enviado con éxito.");
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
+
+### Explicación del Proceso
+1. El **Cliente**:
+   - Comprime el archivo usando `GZIPOutputStream`.
+   - Envía los datos comprimidos al servidor.
+
+2. El **Servidor**:
+   - Recibe los datos comprimidos.
+   - Descomprime el archivo usando `GZIPInputStream`.
+   - Guarda el archivo descomprimido en el disco.
+
+
+## Práctica: Mejoras este código. elige una de estas opciones y 
+- **Verificación de Integridad**: Utiliza checksums como MD5 o SHA-256.
+- **Interfaz de Usuario**: Implementa una interfaz gráfica para seleccionar y transferir archivos.
+- **Seguridad**: Usa SSL para cifrar la transferencia.
+- **Enviar el cliente un pantallazo de la pantalla cuando se lo solicite el servidor
+
+## Proyecto final de sockets: Reto crea un minijuego un 3 en raya (tic tac toe)
