--- a/20250109.md
+++ b/20250109.md
@@ -223,10 +223,12 @@ public class FileClient {
    - Guarda el archivo descomprimido en el disco.
 
 
-## Práctica: Mejoras este código. elige una de estas opciones y 
+## Práctica: Mejoras el código. elige una de estas opciones e implementalá.
 - **Verificación de Integridad**: Utiliza checksums como MD5 o SHA-256.
 - **Interfaz de Usuario**: Implementa una interfaz gráfica para seleccionar y transferir archivos.
 - **Seguridad**: Usa SSL para cifrar la transferencia.
 - **Enviar el cliente un pantallazo de la pantalla cuando se lo solicite el servidor
 
-## Proyecto final de sockets: Reto crea un minijuego un 3 en raya (tic tac toe)
+## Proyecto final de sockets: 
+### Reto crea un minijuego un 3 en raya (tic tac toe), un hundir la flota
+### Reto crea un malware que sea capaz de manejar la máquina cliente (hacer foto de la webcam, envío y listado de directorios, ejecución remota de comandos RCE)
