--- a/20250109_2_trimestre.md
+++ b/20250109_2_trimestre.md
@@ -7,6 +7,15 @@
 * 20 FEBRERO SESIÓN DE EVALUACIÓN
 * 21 FEBRERO NOTAS
 
+   Febrero 2025
+Lu Ma Mi Ju Vi Sa Do
+                1  2
+ 3  4  5  6  7  8  9
+10 11 12 13 14 15 16
+17 18 19 20 21 22 23
+24 25 26 27 28
+
+
 *    Enero 2025
 * Lu Ma Mi Ju Vi Sa Do
 *        1  2  3  4  5
