--- a/20250109_2_trimestre.md
+++ b/20250109_2_trimestre.md
@@ -7,30 +7,24 @@
 * 20 FEBRERO SESIÓN DE EVALUACIÓN
 * 21 FEBRERO NOTAS
 
-   Febrero 2025
-Lu Ma Mi Ju Vi Sa Do
-                1  2
- 3  4  5  6  7  8  9
-10 11 12 13 14 15 16
-17 18 19 20 21 22 23
-24 25 26 27 28
+### ENERO 2025
+| Lu | Ma | Mi | Ju | Vi | Sa | Do |
+|----|----|----|----|----|----|----|
+|    |    |  1 |  2 |  3 |  4 |  5 |
+|  6 |  7 |  8 |  9 | 10 | 11 | 12 | SOCKETS
+| 13 | 14 | 15 | 16 | 17 | 18 | 19 | SOCKETS
+| 20 | 21 | 22 | 23 | 24 | 25 | 26 | SERVICIOS EN RED
+| 27 | 28 | 29 | 30 | 31 |    |    | SERVICIOS EN RED / PROGRAMACIÓN SEGURA
 
+### FEBRERO 2025
+| Lu | Ma | Mi | Ju | Vi | Sa | Do |
+|----|----|----|----|----|----|----|
+|    |    |    |    |    |  1 |  2 |
+|  3 |  4 |  5 |  6 |  7 |  8 |  9 | PROGRAMACIÓN SEGURA
+| 10 | 11 | 12 | 13 | 14 | 15 | 16 | REPASO Y EXÁMENES 14 VIERNES EXÁMEN DE SERVICIOS Y PRCOESOS
+| 17 | 18 | 19 | 20 | 21 | 22 | 23 | 18 EXAMEN DE INTERFACES
+| 24 | 25 | 26 | 27 | 28 |    |    |
 
-*    Enero 2025
-* Lu Ma Mi Ju Vi Sa Do
-*        1  2  3  4  5
-*  6  7  8  9 10 11 12  SOCKETS
-* 13 14 15 16 17 18 19  SOCKETS
-* 20 21 22 23 24 25 26  SERVICIOS EN RED
-* 27 28 29 30 31        SERVICIOS EN RED
-
-*    Febrero 2025
-* Lu Ma Mi Ju Vi Sa Do
-*                 1  2  PROGRAMACION SEGURA
-*  3  4  5  6  7  8  9 PROGRAMACIÓN SEGURA
-* 10 11 12 13 14 15 16  REPASO Y EXÁMENES 14 VIERNES EXÁMEN DE SERVICIOS Y PRCOESOS
-* 17 18 19 20 21 22 23 18 EXAMEN DE INTERFACES
-* 24 25 26 27 28  
 ---
 
 ## Generación de Servicios en Red
