--- a/20250109_2_trimestre.md
+++ b/20250109_2_trimestre.md
@@ -11,20 +11,27 @@
 | Lu | Ma | Mi | Ju | Vi | Sa | Do |
 |----|----|----|----|----|----|----|
 |    |    |  1 |  2 |  3 |  4 |  5 |
-|  6 |  7 |  8 |  9 | 10 | 11 | 12 | * SOCKETS
-| 13 | 14 | 15 | 16 | 17 | 18 | 19 | * SOCKETS
-| 20 | 21 | 22 | 23 | 24 | 25 | 26 | * SERVICIOS EN RED
-| 27 | 28 | 29 | 30 | 31 |    |    | * SERVICIOS EN RED / PROGRAMACIÓN SEGURA
+|  6 |  7 |  8 |  9 | 10 | 11 | 12 | 
+| 13 | 14 | 15 | 16 | 17 | 18 | 19 |
+| 20 | 21 | 22 | 23 | 24 | 25 | 26 | 
+| 27 | 28 | 29 | 30 | 31 |    |    | 
 
+* SOCKETS
+* SOCKETS
+* SERVICIOS EN RED
+* SERVICIOS EN RED / PROGRAMACIÓN SEGURA
+  
 ### FEBRERO 2025
 | Lu | Ma | Mi | Ju | Vi | Sa | Do |
 |----|----|----|----|----|----|----|
 |    |    |    |    |    |  1 |  2 |
-|  3 |  4 |  5 |  6 |  7 |  8 |  9 | PROGRAMACIÓN SEGURA
-| 10 | 11 | 12 | 13 | 14 | 15 | 16 | REPASO Y EXÁMENES 14 VIERNES EXÁMEN DE SERVICIOS Y PRCOESOS
-| 17 | 18 | 19 | 20 | 21 | 22 | 23 | 18 EXAMEN DE INTERFACES
+|  3 |  4 |  5 |  6 |  7 |  8 |  9 | 
+| 10 | 11 | 12 | 13 | 14 | 15 | 16 | 
+| 17 | 18 | 19 | 20 | 21 | 22 | 23 | 
 | 24 | 25 | 26 | 27 | 28 |    |    |
-
+* PROGRAMACIÓN SEGURA
+* REPASO Y EXÁMENES 14 VIERNES EXÁMEN DE SERVICIOS Y PRCOESOS
+* 18 EXAMEN DE INTERFACES
 ---
 
 ## Generación de Servicios en Red
