--- a/20250109_2_trimestre.md
+++ b/20250109_2_trimestre.md
@@ -17,7 +17,7 @@
 | 27 | 28 | 29 | 30 | 31 |    |    | 
 
 * SOCKETS
-* SOCKETS
+* SOCKETS / SERVICIOS EN RED
 * SERVICIOS EN RED
 * SERVICIOS EN RED / PROGRAMACIÓN SEGURA
   
