--- a/20250109.md
+++ b/20250109.md
@@ -132,7 +132,7 @@ public static void main(String[] args) {
 ```
 ### Ejercicio_clase: Ejecuta este servidor y explica el código
 
-### Diferencias entre la implementación con hilos y con NIO
+### modifica el código para que el cliente obtenga el mensaje junto con la dirección ip del cliente que envía ese mensaje
 
 ## Transferir ficheros entre servidor y cliente
 
