--- a/20250213.md
+++ b/20250213.md
@@ -5,7 +5,7 @@
 import java.io.*;
 import java.net.*;
 
-public class ServidorWeb {
+public class Servidor {
     public static void main(String[] args) {
         int port = 8080;
         
