--- a/20250213.md
+++ b/20250213.md
@@ -10,7 +10,7 @@ public class Servidor {
         int port = 8080;
         
         try (ServerSocket serverSocket = new ServerSocket(port)) {
-            System.out.println("Servidor web iniciado en el puerto " + port);
+            System.out.println("Servidor iniciado en el puerto " + port);
             
             while (true) {
                 try (Socket clientSocket = serverSocket.accept();
