--- a/20250213.md
+++ b/20250213.md
@@ -203,7 +203,8 @@ public class Servidor {
 }
 ```
 # CLIENTE
- ``` import java.io.*;
+ ```java
+import java.io.*;
 import java.net.*;
 
 public class cliente {
