--- a/20250213.md
+++ b/20250213.md
@@ -501,3 +501,23 @@ public class cliente {
     }
 }
 ```
+---
+# EJERCICIOS
+
+### Sistema de reservas
+Descripción: Crea un servidor que permita a los clientes reservar asientos en un teatro. El servidor debe mantener un registro de los asientos disponibles y reservados.
+
+Requisitos:
+
+* Los clientes deben poder ver los asientos disponibles y reservar uno.
+* El servidor debe validar que el asiento esté disponible antes de reservarlo.
+* El servidor debe actualizar la lista de asientos en tiempo real.
+
+### Sistema de autenticación
+Descripción: Desarrolla un servidor que requiera autenticación para permitir el acceso a los clientes. El servidor debe verificar un nombre de usuario y contraseña antes de permitir la conexión.
+
+Requisitos:
+
+* El servidor debe tener una lista de usuarios y contraseñas válidas.
+* Si el cliente falla en la autenticación, el servidor debe cerrar la conexión.
+* Solo los clientes autenticados pueden enviar y recibir mensajes.
