--- a/20250213.md
+++ b/20250213.md
@@ -521,3 +521,12 @@ Requisitos:
 * El servidor debe tener una lista de usuarios y contraseñas válidas.
 * Si el cliente falla en la autenticación, el servidor debe cerrar la conexión.
 * Solo los clientes autenticados pueden enviar y recibir mensajes.
+
+## Juego de preguntas y respuestas
+Descripción: Implementa un servidor que funcione como un juego de preguntas y respuestas. El servidor debe enviar preguntas a los clientes y verificar sus respuestas.
+
+Requisitos:
+
+* El servidor debe tener una lista de preguntas y respuestas predefinidas.
+* Cada cliente debe recibir una pregunta y enviar una respuesta.
+* El servidor debe llevar un registro de la puntuación de cada cliente.
