--- a/20250213.md
+++ b/20250213.md
@@ -530,3 +530,12 @@ Requisitos:
 * El servidor debe tener una lista de preguntas y respuestas predefinidas.
 * Cada cliente debe recibir una pregunta y enviar una respuesta.
 * El servidor debe llevar un registro de la puntuación de cada cliente.
+
+## Transferencia de archivos 
+Descripción: Crea un servidor que permita a los clientes enviar archivos . El servidor debe recoger los archivos y guardarlos en una carpeta específica.
+
+Requisitos:
+
+* El cliente debe enviar el archivo
+* El servidor debe descifrar el archivo y guardarlo con un nombre único.
+  
