--- a/20250213.md
+++ b/20250213.md
@@ -539,3 +539,4 @@ Requisitos:
 * El cliente debe enviar el archivo
 * El servidor debe descifrar el archivo y guardarlo con un nombre único.
   
+### Servidor con ECO
