--- a/20250213.md
+++ b/20250213.md
@@ -539,4 +539,8 @@ Requisitos:
 * El cliente debe enviar el archivo
 * El servidor debe descifrar el archivo y guardarlo con un nombre único.
   
-### Servidor con ECO
+### Ejercicio sencillo básico
+Servidor con ECO
+
+### ejercicio de examen 
+Escribe un servidor que acepte conexiones de múltiples clientes. Cada cliente debe enviar su nombre, y el servidor debe responder con un mensaje personalizado (por ejemplo, "Hola, [nombre]").
