--- a/20250213.md
+++ b/20250213.md
@@ -540,7 +540,7 @@ Requisitos:
 * El servidor debe descifrar el archivo y guardarlo con un nombre único.
   
 ### Ejercicio sencillo básico
-Servidor con ECO
+* Servidor con ECO
 
 ### ejercicio de examen 
-Escribe un servidor que acepte conexiones de múltiples clientes. Cada cliente debe enviar su nombre, y el servidor debe responder con un mensaje personalizado (por ejemplo, "Hola, [nombre]").
+* Escribe un servidor que acepte conexiones de múltiples clientes. Cada cliente debe enviar su nombre, y el servidor debe responder con un mensaje personalizado (por ejemplo, "Hola, [nombre]").
